# QT_Gripper

./: CMakeLists.txt  README.md  main.cpp  myglwidget.cpp  myglwidget.h  serial.cpp  serial.h  widget.cpp  widget.h  widget.ui
